[O2O_1.0.0.1 2015-07-06 张春生]
1.新功能:初始化项目

[O2O_1.0.0.1 2015-07-07 张春生]
1.新功能:增加layout扩展

--备注分类
1、新功能：
2、Bug:
3、需求变更：
4、重构：
5、merge:

--格式：
[O2O_1.0.0.1 2015-07-06 张春生]
版本号 日期 提交人
版本号：产品名 版本类型 主版本 辅版本 新功能版本 缺陷版本