@@ -3,6 +3,8 @@
 
 [O2O_1.0.0.1 2015-07-07 张春生]
 1.新功能:增加layout扩展
+2.新功能:增加logger扩展
+3.新功能:增加request扩展
 
 --备注分类
 1、新功能：
